<?xml version="1.0" encoding="UTF-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearRowlinkedin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <View
            android:background="@drawable/rectangle_bg_indigo_a201_radius_9"
            android:id="@+id/viewImageThree"
            android:layout_height="@dimen/_71pxh" android:layout_width="@dimen/_71pxh"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnlinkedin"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5pxv"
            android:layout_marginStart="@dimen/_19pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_weight="0.67" android:layout_width="0dp" android:orientation="vertical">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearLocation"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageLinkedin"
                    android:layout_height="@dimen/_8pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_7pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_linkedin"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_linkedin"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtMumbai"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.06"
                    android:singleLine="true"
                    android:text="@string/lbl_mumbai"
                    style="@style/txtMontserratsemibold8" tools:text="@string/lbl_mumbai"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtHouseName"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.02" android:singleLine="true"
                android:text="@string/lbl_house_name"
                style="@style/txtMontserratsemibold19" tools:text="@string/lbl_house_name"/>
            <LinearLayout android:id="@+id/linearRating"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageClose"
                    android:layout_height="@dimen/_8pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_69pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_close"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_close"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txt45OUTOFFive"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_weight="0.49"
                    android:layout_width="0dp"
                    android:letterSpacing="0.03"
                    android:singleLine="true"
                    android:text="@string/lbl_4_5_out_of_5"
                    style="@style/txtMontserratsemibold9" tools:text="@string/lbl_4_5_out_of_5"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
